--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -26,11 +26,13 @@ body{
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
-	position: absolute;
 	margin: 0 auto;
 	align-items: center;
 }
-
+.subBtn{
+    background:transparent;
+    border:0;
+}
 .message{
 	border: 1px solid black;
 	width: 80%;
@@ -40,7 +42,6 @@ body{
 	width: 700px;
 	height: 800px;
 	margin-top: 100px;
-
 }
 .header{
 	padding-left: 10%;
