--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -4,26 +4,40 @@
 	width: 350px;
 }
 .loginHeader{
+	width: 410px;
+	height: 40px;
+	text-align: center;
+	font-size: 20px;
+	padding-top: 20px;
 	margin-top: 0px;
-	margin-bottom: 20px;
-	text-transform: uppercase;
+	border-radius: 10px;
+	margin-bottom: 18px;
+	box-shadow: -1px 6px 5px 0px #787878;
+	background: #e3e2d8;
 }
 
 .field{
-	width: 250px;
-	height: 30px;
-	margin-bottom: 35px;
+	padding-left: 10px;
+	width: 400px;
+	border-radius: 10px;
+	border: 1px solid black;
+	height: 40px;
+	background: #e3e2d8;
+	font-size: 20px;
+	box-shadow: -1px 6px 5px 0px #787878;
+	margin-bottom: 18px;
 }
 
 .loginBtn{
-		width: 250px;
-	height: 45px;
-	border-radius: 20px;
-	background: linear-gradient(47deg, rgba(232,177,8,1) 0%, rgba(253,77,29,1) 50%, rgba(138,26,236,1) 100%);
+	width: 400px;
+	height: 50px;
+	box-shadow: -1px 6px 5px 0px #787878;
+	border-radius: 10px;
+	background: #baced5;
 }
 .loginBtn:hover{
 	transition: all 5s ease-out;
-	background: linear-gradient(47deg, rgba(232,177,8,1) 0%, rgba(253,77,29,1) 30%, rgba(138,26,236,1) 100%);
+	background:#B6C8DD;
 }
 .bodyWrapper{
 	display: flex;
