--- a/src/main/webapp/resources/css/select.css
+++ b/src/main/webapp/resources/css/select.css
@@ -6,17 +6,26 @@
 	align-items: center;
 }
 .opponentName{
-	width: 300px;
-	height: 30px;
-
+	padding-left: 10px;
+	width: 450px;
+	height: 36px;
+	border-radius: 10px;
+	border: 1px solid black;
+	font-size: 20px;
 }
 .searchForm{
 	display: flex;
+	align-items: center;
 	flex-direction: row;
 }
 .searchBtn{
-	height: 36px;
-	width: 100px;
+	background: #baced5;
+	border-radius: 10px;
+	border: 0;
+	margin-top: 5px;
+	margin-left: 10px;
+	height: 60px;
+	width: 60px;
 }
 .searchFormArc{
 	width: 40%;
@@ -25,9 +34,12 @@
 	justify-content: center;
 }
 .user{
+	background: #baced5;
 	display: flex;
+	margin-bottom: 10px;
 	justify-content: space-between;
 	width: 600px;
+	border: 0;
 	padding: 10px;
 }
 .userPhoto{
